--- a/.github/workflows/unittest.yml
+++ b/.github/workflows/unittest.yml
@@ -34,7 +34,7 @@ jobs:
         uses: docker://nordicplayground/nrfconnect-sdk:main
         continue-on-error: true
         with:
-          args: bash -c "apt install -y lcov gcc-multilib && cd ncs/nrf && source ../zephyr/zephyr-env.sh && ../zephyr/scripts/twister -i -C -T ./ -p native_posix"
+          args: bash -c "apt install -y lcov gcc-multilib && cd ncs/nrf && source ../zephyr/zephyr-env.sh && ../zephyr/scripts/twister -i -C -T ./applications/asset_tracker_v2/ -p native_posix"
 
       - name: Replace docker paths in coverage file
         run: |
@@ -44,6 +44,6 @@ jobs:
         uses: balaji-nordic/github-actions-report-lcov@remove_artifact_uploading_step
         with:
           coverage-files: ncs/nrf/twister-out/coverage.info
-          github-token: ${{ secrets.GITHUB_TOKEN }}
+          github-token: ${{ secrets.NCS_GITHUB_TOKEN }}
           minimum-coverage: 10
           working-directory: ncs/nrf
