fixup: Use GITHUB_TOKEN
This is to test out the commenting. It was still not working
with NCS_GITHUB_TOKEN
.

Signed-off-by: Balaji Srinivasan <balaji.srinivasan@nordicsemi.no>

--- a/.github/workflows/unittest.yml
+++ b/.github/workflows/unittest.yml
@@ -45,6 +45,6 @@ jobs:
         uses: balaji-nordic/github-actions-report-lcov@remove_artifact_uploading_step
         with:
           coverage-files: ncs/nrf/twister-out/coverage.info
-          github-token: ${{ secrets.NCS_GITHUB_TOKEN }}
+          github-token: ${{ secrets.GITHUB_TOKEN }}
           minimum-coverage: 10
           working-directory: ncs/nrf
