tests: lib: lte_lc_api: Custom stub for at_scan_if
Make CMock skip mock generation for nrf_modem_at_scanf.
Remove mocks header file and mock the entire nrf_modem_at.h API.

Signed-off-by: Balaji Srinivasan <balaji.srinivasan@nordicsemi.no>

--- a/tests/unity/unity_cfg.yaml
+++ b/tests/unity/unity_cfg.yaml
@@ -31,6 +31,9 @@
         'int64_t': 'INT64'
         'uint64_t': 'HEX64'
 
+    :strippables:
+        - '(?:__wrap_nrf_modem_at_scanf\s*\(+.*?\)+)'
+
 :unity:
     :suite_teardown: >
        extern int test_suiteTearDown(int); return test_suiteTearDown(num_failures);
