--- a/subsys/net/lib/lwm2m_client_utils/CMakeLists.txt
+++ b/subsys/net/lib/lwm2m_client_utils/CMakeLists.txt
@@ -28,4 +28,5 @@ zephyr_library_sources_ifdef(CONFIG_LWM2M_CLIENT_UTILS_LOCATION_ASSISTANCE
 zephyr_library_sources_ifdef(CONFIG_LWM2M_CLIENT_UTILS_RAI
 			     lwm2m/lwm2m_rai.c)
 zephyr_library_sources(lwm2m/lwm2m_lte_notification.c)
+zephyr_library_sources_ifdef(CONFIG_LWM2M_CLIENT_UTILS_ADV_FIRMWARE_UPDATE_OBJ_SUPPORT lwm2m/lwm2m_adv_firmware.c)
 zephyr_include_directories(lwm2m/include)
