net: lib: LwM2M Firmware utils update
Advaced firmware object multi instance update

* Wrapper layer for old FOTA and new advanced FOTA
* create own Instance for Modem and Application

Update execution update:

* Init DFU by Image type
* mark DFU firmware shedule to target.

Reset and Cancel execution update
* Init DFU by Image type
* Cancel operation is accept also from downloading state.

Storing Firmware objects critical parameters to settings

* Firmware object State
* Firmware update result
* DFU image type
* Remove old settings usage for counter.

Signed-off-by: Juha Heiskanen <juha.heiskanen@nordicsemi.no>

--- a/subsys/net/lib/lwm2m_client_utils/Kconfig
+++ b/subsys/net/lib/lwm2m_client_utils/Kconfig
@@ -82,6 +82,7 @@ config LWM2M_CLIENT_UTILS_FIRMWARE_UPDATE_OBJ_SUPPORT
 	select IMG_ERASE_PROGRESSIVELY
 	select FLASH
 	select MPU_ALLOW_FLASH_WRITE
+	select FOTA_DOWNLOAD_PROGRESS_EVT if FOTA_DOWNLOAD
 
 if LWM2M_CLIENT_UTILS_FIRMWARE_UPDATE_OBJ_SUPPORT
 
