--- a/samples/nrf9160/lwm2m_client/prj.conf
+++ b/samples/nrf9160/lwm2m_client/prj.conf
@@ -90,6 +90,9 @@ CONFIG_DOWNLOAD_CLIENT_STACK_SIZE=4096
 CONFIG_DOWNLOAD_CLIENT_HTTP_FRAG_SIZE_1024=y
 CONFIG_FOTA_DOWNLOAD=y
 
+# Application version
+CONFIG_MCUBOOT_IMAGE_VERSION="1.0.0"
+
 # Set LwM2M Server IP address here
 CONFIG_LWM2M_CLIENT_UTILS_SERVER="coaps://leshan.eclipseprojects.io:5684"
 
