net: lib: fota_download: Fota download update & bug fix
Config update: FOTA_CLIENT_EVT_DONE_SHEDULE_DFU

Added possible to skip automated firmware shedule permission
at finished push or pull operation. Default is behaviour is original.

Bug Fix:
Fix crash if fota_cancel is called until any start.

Signed-off-by: Juha Heiskanen <juha.heiskanen@nordicsemi.no>

--- a/subsys/net/lib/fota_download/Kconfig
+++ b/subsys/net/lib/fota_download/Kconfig
@@ -20,6 +20,10 @@ config FOTA_SOCKET_RETRIES
 config FOTA_DOWNLOAD_PROGRESS_EVT
 	bool "Emit progress event upon receiving a download fragment"
 
+config FOTA_CLIENT_AUTOSCHEDULE_UPDATE
+	bool "Mark target images to be updated when downloaded"
+	default y
+
 config FOTA_DOWNLOAD_MCUBOOT_FLASH_BUF_SZ
 	int "Size of buffer used for flash write operations during MCUboot updates"
 	depends on DFU_TARGET_MCUBOOT
