workflow: Change rebase workflow to do fast forward merge
Change rebase workflow to do fast forward merge

Signed-off-by: Balaji Srinivasan <balaji.srinivasan@nordicsemi.no>

--- a/.github/workflows/rebase_to_ncs_main.yml
+++ b/.github/workflows/rebase_to_ncs_main.yml
@@ -19,7 +19,7 @@ jobs:
         run: |
           git remote add  ncs https://github.com/nrfconnect/sdk-nrf
           git fetch ncs
-          git rebase ncs/main
+          git rebase --ff ncs/main
 
       - name: Create Pull Request
         uses: peter-evans/create-pull-request@v4
