--- a/.github/workflows/sonarcloud.yml
+++ b/.github/workflows/sonarcloud.yml
@@ -40,12 +40,6 @@ jobs:
           cd ncs
           west update --narrow -o=--depth=1
 
-      - name: Run native_posix tests without sonar cloud build wrapper (with code coverage enabled)
-        shell: bash
-        run: |
-          source ncs/zephyr/zephyr-env.sh
-          ncs/zephyr/scripts/twister -v -i -C -T ncs/nrf/applications/asset_tracker_v2/tests/lwm2m_codec -p native_posix --coverage-tool gcovr
-
       - name: Set up JDK 11
         uses: actions/setup-java@v1
         with:
@@ -80,6 +74,12 @@ jobs:
       #    source ncs/zephyr/zephyr-env.sh
       #    build-wrapper-linux-x86-64 --out-dir ${{ env.BUILD_WRAPPER_OUT_DIR }} ncs/zephyr/scripts/twister -b -v -i -T ncs/nrf/applications/asset_tracker_v2/ -t ci_build -G
 
+      - name: Run native_posix tests without sonar cloud build wrapper (with code coverage enabled)
+        shell: bash
+        run: |
+          source ncs/zephyr/zephyr-env.sh
+          ncs/zephyr/scripts/twister -v -i -C -T ncs/nrf/applications/asset_tracker_v2/tests/lwm2m_codec -p native_posix --test-only --coverage-tool gcovr
+
       - name: Run sonar-scanner
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
@@ -92,4 +92,4 @@ jobs:
                         --define sonar.exclusions="**/*.py,**twister-out**,**/*.java,**/*.html,**/*.php" \
                         --define sonar.cpd.exclusions="**CMakeFiles**" \
                         --define sonar.cfamily.build-wrapper-output="${{ env.BUILD_WRAPPER_OUT_DIR }}" \
-                        --define sonar.cfamily.gcov.reportsPath="twister-out.1"
+                        --define sonar.cfamily.gcov.reportsPath="twister-out"
