--- a/.github/workflows/sonarcloud.yml
+++ b/.github/workflows/sonarcloud.yml
@@ -78,19 +78,12 @@ jobs:
         shell: bash
         run: |
           source ncs/zephyr/zephyr-env.sh
-          ncs/zephyr/scripts/twister -v -i -C -T ncs/nrf/applications/asset_tracker_v2/tests/lwm2m_codec -p native_posix --test-only --coverage-tool gcovr
-
-      - name: Collect coverage into one XML report
-        shell: bash
-        run: |
-          cd twister-out
-          gcovr --sonarqube > coverage.xml
+          ncs/zephyr/scripts/twister -v -i -C -T ncs/nrf/applications/asset_tracker_v2/tests/lwm2m_codec -p native_posix --coverage-tool gcovr
 
       - name: Run sonar-scanner
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-# Use the older run's twister output folder in reportsPath because thats the one that has coverage data
         run: |
           sonar-scanner --define sonar.projectKey=balaji-nordic_sdk-nrf \
                         --define sonar.organization=balaji-nordic \
@@ -98,4 +91,4 @@ jobs:
                         --define sonar.exclusions="**/*.py,**twister-out**,**/*.java,**/*.html,**/*.php" \
                         --define sonar.cpd.exclusions="**CMakeFiles**" \
                         --define sonar.cfamily.build-wrapper-output="${{ env.BUILD_WRAPPER_OUT_DIR }}" \
-                        --define sonar.coverageReportPaths=twister-out/coverage.xml
+                        --define sonar.cfamily.gcov.reportsPath="twister-out"
