exclude twister-out.1 and twister-out.2
Signed-off-by: Balaji Srinivasan <balaji.srinivasan@nordicsemi.no>

--- a/.github/workflows/sonarcloud.yml
+++ b/.github/workflows/sonarcloud.yml
@@ -83,7 +83,8 @@ jobs:
       - name: Collect coverage into one XML report
         shell: bash
         run: |
-          gcovr --exclude=twister-out --exclude=tests/unity --sonarqube coverage.xml
+          gcovr --exclude=twister-out --exclude=twister-out.1 --exclude=twister-out.2 --exclude=tests/unity --sonarqube coverage.xml
+          cat coverage.xml
 
       - name: Run sonar-scanner
         env:
