try cleanup of twister-out folders
Signed-off-by: Balaji Srinivasan <balaji.srinivasan@nordicsemi.no>

--- a/.github/workflows/sonarcloud.yml
+++ b/.github/workflows/sonarcloud.yml
@@ -86,6 +86,11 @@ jobs:
           gcovr --exclude=twister-out --exclude=twister-out.1 --exclude=twister-out.2 --exclude=tests/unity --sonarqube coverage.xml
           cat coverage.xml
 
+      - name: Cleanup twister output
+        shell: bash
+        run: |
+          rm -rf twister-out*
+
       - name: Run sonar-scanner
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
